# cframe

./: CMakeLists.txt  LICENSE  README.md  client.py
src/: cframe.cpp  cframe.h  test.cpp
src/linux/: cframe_linux_impl.cpp  cframe_linux_impl.h
src/win/: cframe_win_impl.cpp  cframe_win_impl.h
